<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wallpepper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="random_count">Random count</string>
    <string name="vk_public_id">VK group ID</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="tags">Tags (comma-separated)</string>
    <string name="random_count_text">10</string>
    <string name="tag_example">e.g. sunset</string>
    <string name="low_res">Low res (for testing)</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="set_bg_progress">Setting wallpaper as background…</string>
    <string name="download_bg_progress">Downloading wallpaper…</string>
    <string name="save_background">Save current wallpaper</string>
    <string name="save_to_file">Writing current wallpaper to file…</string>

</resources>
